--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <h1>Rock Paper Scissors</h1>
+    <div class="container">
+        Choose your weapon
+        <ul>
+            <li class="choice">Rock</li>
+            <li class="choice">Paper</li>
+            <li class="choice">Scissors</li>
+        </ul>
+    </div>
+    <div class="scoreboard">
+        Scoreboard
+        <ul>
+            <li>
+                You
+                <ul>
+                    <li class="score1">0</li>
+                </ul>
+            </li>
+            <li>
+                Comp
+                <ul>
+                    <li class="score2">0</li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <div class="description"></div>
+    <div class="result"></div>
     <script src="script.js"></script>
 </body>
 </html>
