made the reset button functional

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     <div class="description"></div>
     <div class="result"></div>
     <script src="script.js"></script>
-    <div class="footer"></div>
+    <div class="footer">
+        <button type="button" class="btn btn-secondary">Reset Game</button>
+    </div>
 </body>
 </html>
