--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <!-- font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
@@ -23,9 +27,9 @@
         <div class="top-UI">
             Choose your weapon
             <div class="choices">
-                <button type="button" class="choice btn btn-secondary">Rock</button>
-                <button type="button" class="choice btn btn-secondary">Paper</button>
-                <button type="button" class="choice btn btn-secondary">Scissors</button>
+                <button type="button" class="choice btn btn-secondary btn-lg">Rock</button>
+                <button type="button" class="choice btn btn-secondary btn-lg">Paper</button>
+                <button type="button" class="choice btn btn-secondary btn-lg">Scissors</button>
             </div>  
         </div>
         <div class="bottom-UI">
